...
            "state": "translated",
            "value": "粘贴"
          }
        }
      }
    },
    "Delete": {
      "extractionState": "manual",
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "删除"
...
            "state": "translated",
            "value": "保存…"
          }
        }
      }
    },
    "Discard changes": {
      "extractionState": "manual",
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "放弃修改"
...
            "state": "translated",
            "value": "更改"
          }
        }
      }
    },
    "Latitude": {
      "extractionState": "manual",
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "纬度"
          }
        }
      }
    },
    "Longitude": {
      "extractionState": "manual",
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "经度"
...
