...
    }
}

// PhotoLibrary logging

extension PhotoLibrary {
    static let logger = Logger(subsystem: Bundle.main.bundleIdentifier ?? "PhotoTrail",
                               category: "PhotoLibrary")
}

// Request authorization to use Photo Library

extension PhotoLibrary {
...
