import XCTest

@MainActor
final class UITestGroup1: XCTestCase {

    private let testIDs = TestIDs.ContentView.self

    override func setUp() async throws {
        continueAfterFailure = false
    }

    private func element(_ app: XCUIApplication, matching id: String) -> XCUIElement {
        return app.descendants(matching: .any).matching(identifier: id).element
    }

    func testALaunch() async throws {
        let dismissID = TestIDs.DismissModifier.dismissButtonID
        let app = XCUIApplication()
        app.launchArguments.append("-UIINIT")
        app.activate()
        XCTAssert(app.windows["PhotoTrail"].exists)
        let screenshot = app.screenshot()
        let attachment = XCTAttachment(screenshot: screenshot)
        attachment.name = "Initial launch"
        attachment.lifetime = .keepAlways
        add(attachment)
        let dismissButton = element(app, matching: dismissID)
        XCTAssert(dismissButton.waitForExistence(timeout: 0.300))
        dismissButton.click()
        XCTAssert(dismissButton.waitForNonExistence(timeout: 0.300))
        XCTAssert(element(app, matching: testIDs.imageViewID).exists)
        XCTAssert(element(app, matching: testIDs.imageTableViewID).exists)
        XCTAssert(element(app, matching: testIDs.photoPickerViewID).exists)
        XCTAssert(element(app, matching: testIDs.imageInspectorViewID).exists)
        app.buttons["_XCUI:CloseWindow"].firstMatch.click()
    }

    func testBMetadataPaneIsPermanent() async throws {
        let app = XCUIApplication()
        app.launchArguments.append("-NOBACKUP")
        app.activate()
        XCTAssert(element(app, matching: testIDs.imageInspectorViewID).waitForExistence(timeout: 2))
        XCTAssert(!element(app, matching: testIDs.inspectorButtonViewID).exists)
        app.buttons["_XCUI:CloseWindow"].firstMatch.click()
    }

    func testCLibraryOpens() async throws {
        let app = XCUIApplication()
        app.launchArguments.append("-NOBACKUP")
        app.activate()
        let photoPickerButton = element(app, matching: testIDs.photoPickerViewID)
        XCTAssert(photoPickerButton.exists)
        photoPickerButton.click()
        try await Task.sleep(for: .milliseconds(100))
        let screenshot = app.screenshot()
        let attachment = XCTAttachment(screenshot: screenshot)
        attachment.name = "Photo Library Picker"
        attachment.lifetime = .keepAlways
        add(attachment)
        app.buttons["Cancel"].firstMatch.click()
        app.buttons["_XCUI:CloseWindow"].firstMatch.click()
    }

    func testDAdjustTimezoneWindow() async throws {
        let timezoneID = "Specify Time Zone…"
        let cameraTimezoneID = TestIDs.AdjustTimeZoneView.cameraTimeZoneID
        let app = XCUIApplication()
        app.launchArguments.append("-NOBACKUP")
        app.activate()
        let timezoneButton = element(app, matching: timezoneID)
        XCTAssert(timezoneButton.exists)
        timezoneButton.click()
        XCTAssert(element(app, matching: cameraTimezoneID).exists)
        app.buttons["_XCUI:CloseWindow"].firstMatch.click()
        app.buttons["_XCUI:CloseWindow"].firstMatch.click()
    }

    func testEShowRunLogWindow() async throws {
        let runlogID = "Show log…"
        let testIDs = TestIDs.RunLogView.self
        let app = XCUIApplication()
        app.launchArguments.append("-NOBACKUP")
        app.activate()
        let runlogButton = element(app, matching: runlogID)
        XCTAssert(runlogButton.exists)
        runlogButton.click()
        XCTAssert(element(app, matching: testIDs.refreshID).exists)
        XCTAssert(element(app, matching: testIDs.copyID).exists)
        sleep(1)
        app.buttons["_XCUI:CloseWindow"].firstMatch.click()
        app.buttons["_XCUI:CloseWindow"].firstMatch.click()
    }

    func testFSettingsWindow() async throws {
        let settingsID = "Settings…"
        let closeButtonID = TestIDs.SettingsView.closeID
        let app = XCUIApplication()
        app.launchArguments.append("-NOBACKUP")
        app.activate()
        let settingsButton = element(app, matching: settingsID)
        XCTAssert(settingsButton.exists)
        settingsButton.click()
        sleep(1)
        let screenshot = app.screenshot()
        let attachment = XCTAttachment(screenshot: screenshot)
        attachment.name = "Settings"
        attachment.lifetime = .keepAlways
        add(attachment)
        let closeButton = element(app, matching: closeButtonID)
        XCTAssert(closeButton.exists)
        closeButton.click()
        app.buttons["_XCUI:CloseWindow"].firstMatch.click()
    }
}
